--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -13,3 +13,12 @@ two:
   image_url: MyString
   list_price: 9.99
   minimum_price: 9.99
+
+ruby: 
+  title:       Programming Ruby 1.9
+  description: 
+    Ruby is the fastest growing and most exciting dynamic
+    language out there.  If you need to get working programs
+    delivered fast, you should add Ruby to your toolbox.
+  price:       49.50
+  image_url:   ruby.png 
